@@ -12,6 +12,11 @@ Bug Fixes
   add_route_predicate for example can not take a string and turn it into the
   actual callable function.
 
+- Fix ``pyramid.testing.setUp`` to return a ``Configurator`` with a proper
+  package. Previously it was not possible to do package-relative includes
+  using the returned ``Configurator`` during testing. There is now a
+  ``package`` argument that can override this behavior as well.
+
 Docs
 ----
 
